<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">丢手绢</string>
    <string name="action_settings">Settings</string>
    <string name="create_game">创建游戏</string>
    <string name="join_game">加入游戏</string>
    <string name="about_game">关于游戏</string>
    <string name="creating_server">正在创建服务器</string>
    <string name="refresh">刷新</string>
    <string name="finding_server">正在查找服务器...</string>
    <string name="start_game">开始</string>
    <string name="game_in">进入游戏</string>
    <string name="throw_handkerchief">扔手绢</string>
    <string name="look_back">回头看</string>
    <string name="setup_game">设置游戏</string>

</resources>
