<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1.0" 
        android:background="@color/down"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/status_text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="9.0" >

        <Button
            android:id="@+id/create_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:textSize="18sp"
            android:text="@string/create_game" />

        <Button
            android:id="@+id/join_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_game"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:text="@string/join_game" 
            android:textSize="18sp"/>

        <Button
            android:id="@+id/setup_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_game"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:text="@string/setup_game"
            android:textSize="18sp" />
        <Button
            android:id="@+id/about_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setup_game"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:text="@string/about_game"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>