<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/back">

    <RelativeLayout
        android:id="@+id/status_bar3"
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1.0"
        android:background="@color/down"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/status_text_playerlist"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/creating_server"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        
        android:layout_height="0.0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="8.0" >

        <ru.biovamp.widget.CircleLayout
            android:padding="5dp"
            android:id="@+id/player_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
             >
        </ru.biovamp.widget.CircleLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/status_bar_3"
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1.0"
        android:background="@color/black"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/throw_handkerchief"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:text="@string/throw_handkerchief"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:visibility="gone" 
            android:background="@drawable/button_style_new"/>

        <Button
            android:id="@+id/start_game"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:text="@string/start_game"
            android:textColor="@color/black"
            android:textSize="19sp" 
            android:background="@drawable/button_style_new"/>

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/refresh"
            android:textColor="@color/black"
            android:textSize="19sp" 
            android:background="@drawable/button_style_new"/>

        <Button
            android:id="@+id/look_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/look_back"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:visibility="gone" 
            android:background="@drawable/button_style_new"/>
    </RelativeLayout>

</LinearLayout>